--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-size: auto;
-
 }
 
 .col-3 {
@@ -68,7 +67,7 @@
 }
 
 .lorem-moll {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 36px;
     font-weight: 600;
     line-height: 54px;
@@ -76,7 +75,7 @@
 }
 
 .lorem-mol {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 27px;
@@ -107,7 +106,7 @@
 
 
 .nf-se {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 27px;
@@ -217,7 +216,7 @@ p {
 }
 
 .fol-156 {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 24px;
     font-weight: 500;
     line-height: 36px;
@@ -226,7 +225,7 @@ p {
 }
 
 .folowing {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
@@ -297,7 +296,7 @@ p {
 }
 
 .lorem-mol {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 27px;
@@ -322,7 +321,7 @@ p {
 
 .ten {
 
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 27px;
@@ -335,7 +334,7 @@ p {
 }
 
 .two-zero {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 27px;
