--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     list-style: none;
     text-decoration: none;
 }
@@ -18,14 +20,6 @@
     width: 25%;
     padding-left: 12px;
     padding-right: 12px;
-}
-
-.container {
-    max-width: 1320px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .mt-17 {
@@ -47,7 +41,7 @@
     height: 35px;
     border: 2px solid;
     border-radius: 20px;
-    right: 0%;
+    right: -3%;
     background-color: black;
     color: #fff;
     top: -5%;
@@ -83,7 +77,13 @@
     color: #666666;
 }
 
-
+.paragraph {
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0em;
+}
 
 .ml-60 {
     margin-left: 60px;
@@ -102,9 +102,6 @@
     left: 0 !important;
 }
 
-
-
-
 .nf-se {
     font-family: "Poppins", sans-serif;
     font-size: 18px;
@@ -114,51 +111,12 @@
     text-align: left;
 }
 
-
-
-@media (max-width:992px) {
-
-    .menulist {
-        position: fixed;
-        background-color: white;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: -100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        z-index: 2;
-    }
-
-    .centr {
-        width: 24px;
-        height: 3px;
-        background-color: black;
-        margin-left: 12px;
-        z-index: 3;
-    }
-
-    .left {
-        margin-right: 22px;
-        width: 34px;
-        height: 3px;
-        background: black;
-        z-index: 3;
-    }
-
-    .left-1 {
-        width: 24px;
-        height: 3px;
-        background: black;
-        z-index: 3;
-    }
-
-}
-
 .gap-59 {
     gap: 59px;
+}
+
+.fed-walet:hover {
+    color: black;
 }
 
 .fed-walet {
@@ -176,14 +134,6 @@
     height: 70vh;
 }
 
-a {
-    text-decoration: none;
-}
-
-p {
-    margin-bottom: 0;
-}
-
 .pt-120 {
     padding-top: 120px;
 }
@@ -197,6 +147,7 @@ p {
     padding: 39px 38px 38px 39px;
     border-radius: 30px;
     background: white;
+    border: none;
 }
 
 .gap-47 {
@@ -213,6 +164,7 @@ p {
 
 .border-right {
     border-right: 1px solid #CCCCCC;
+    height: 68px;
 }
 
 .fol-156 {
@@ -392,13 +344,53 @@ p {
 }
 
 .py-19 {
-    padding: 19px 0;
+    padding-top: 19px;
+    padding-bottom: 19px;
 }
 
-@media (max-width:768px) {
-    .fed-walet {
-        display: none;
+@media (max-width:992px) {
+
+    .menulist {
+        position: fixed;
+        background-color: grey;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: -100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 2;
     }
+
+    .active {
+        left: 0;
+    }
+
+    .centr {
+        width: 24px;
+        height: 3px;
+        background-color: black;
+        margin-left: 12px;
+        z-index: 3;
+    }
+
+    .left {
+        margin-right: 22px;
+        width: 34px;
+        height: 3px;
+        background: black;
+        z-index: 3;
+    }
+
+    .left-1 {
+        width: 24px;
+        height: 3px;
+        background: black;
+        z-index: 3;
+    }
+
 }
 
 @media (max-width:992px) {
